test/src/e2e_vm_tests/test_programs/should_pass/test_abis/increment_abi/src/main.sw
library increment_abi;

abi Incrementor {
    #[storage(write)]
    fn initialize(initial_value: u64) -> u64;
    #[storage(read, write)]
    fn increment(initial_value: u64) -> u64;
    #[storage(read)]
    fn get() -> u64;
}
