test/src/e2e_vm_tests/test_programs/should_fail/calling_context_unknown/src/main.sw
script;

#[context(unknown)]
fn bar() {}

fn main() {
  bar();
}
